new stylings for Navigation, Login, Registration, Forgot password

--- a/trello-clone/src/pages/Login.module.css
+++ b/trello-clone/src/pages/Login.module.css
@@ -1,5 +1,5 @@
 .loginColor{
-    color: blue;
+    color: steelblue;
     text-align: center;
     
 }
@@ -26,4 +26,5 @@
 }
 .forgetIt{
     font-size: 2px;
+    
 }
