--- a/trello-clone/src/index.css
+++ b/trello-clone/src/index.css
@@ -11,3 +11,60 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: steelblue;
+}
+
+li {
+  float: right;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to black on hover */
+li a:hover {
+  background-color: black;
+}
+input{
+  width: 75%;
+}
+input[type=text] {
+  width: 75%;
+  padding: 5px 15px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+input[type=email] {
+  width: 75%;
+  padding: 5px 15px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+input[type=password] {
+  width: 75%;
+  padding: 5px 15px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+button{
+    width: 35%;
+    padding: 5px 15px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background-color: green;
+    color: aliceblue;
+    font-weight: bold;
+    font-size: medium;
+}
+
+
