Final commit for release 2; finalized all frontend and backend functionality to cover all requirements of release 2

--- a/trello-clone/src/index.css
+++ b/trello-clone/src/index.css
@@ -11,7 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-/* stylings for Navigation Bar */
+/* stylings for NavigationWorkspace Bar */
 ul {
   list-style-type: none;
   margin: 0;
